--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -882,10 +882,47 @@
             </li>
         </ul>
     </div>
-
-
     <!-- END OF USER RIGHT PANEL -->
 
+    <!-- Q&A RIGHT PANEL -->
+    <div class="faster" id="QARightPanel" style="display: none;">
+        <div class="left-align" style="margin-left: 10px; margin-right: 15px;">
+            <ul id="QARightPanelAccordion" class="collapsible expandable popout faster">
+                <!-- --------------------------------------------------------------------------------------- -->
+                <!-- ------------------------------------ General ------------------------------------------ -->
+                <!-- --------------------------------------------------------------------------------------- -->
+                <li id="QAGeneral">
+                    <div class="collapsible-header">
+                        <i class="material-icons arrow">keyboard_arrow_right</i>
+                        <i class="material-icons">info</i>
+                        General
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="input-field">
+                                    <div class="input-field">
+                                        <input id="qatitle" type="text" class="validate" ng-model="qa_title">
+                                        <label for="qatitle">Title</label>
+                                    </div>
+
+                                    <div class="input-field">
+                                        <textarea id="comment" class="validate materialize-textarea" ng-model="qa_comment"></textarea>
+                                        <label for="comment">Comment</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="row right-align">
+                            <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
+                                data-tooltip="Save" ng-click="qa_create_save_pressed()" ng-disabled="(!qa_title) || (!qa_comment)"><i class="material-icons">save</i></a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- END OF Q&A RIGHT PANEL-->
 
 
 </div>
