fetch a Q&A comment from db #64

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -343,7 +343,7 @@
                     <span class="left" style="margin-right: 10px;">Q & A</span>
                     <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_qa_number"></span>
                     <a id="qaPlusBtn" class="waves-effect btn green plusBtn right tooltipped" data-position="left"
-                        data-tooltip="create Question"><i class="material-icons plusIcon">add</i></a>
+                        data-tooltip="create Question" ng-click="qa_plus_button_clicked()"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
