save threads 5 levels #64

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -927,13 +927,53 @@
                                 <textarea class="validate" ng-model="qa_current_comment"></textarea>
                                 <button ng-click="qa_comment_save_button_pressed()">Save</button>
                             </div>
-                            <ul>
-                                <li ng-repeat="post in qa_thread track by post.id">
+                            <ul class="collection">
+                                <li class="collection-item" ng-repeat="post in qa_thread track by post.id">
                                     <span ng-bind="post.comment"></span><button ng-click="qa_reply_button_clicked(post.id)">Reply</button>
                                     <div class="input-field" ng-show="post.replying">
                                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
-                                        <button ng-click="qa_reply_save_button_pressed(post.id)">Save</button>
+                                        <button ng-click="qa_reply_save_button_pressed(post.id, qa_current_reply)">Save</button>
                                     </div>
+                                    <ul class="collection">
+                                        <li class="collection-item" ng-repeat="post2 in post.children track by post2.id">
+                                            <span ng-bind="post2.comment"></span><button ng-click="qa_reply_button_clicked(post2.id)">Reply</button>
+                                            <div class="input-field" ng-show="post2.replying">
+                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                <button ng-click="qa_reply_save_button_pressed(post2.id, qa_current_reply)">Save</button>
+                                            </div>
+                                            <ul class="collection">
+                                                <li class="collection-item" ng-repeat="post3 in post2.children track by post3.id">
+                                                    <span ng-bind="post3.comment"></span><button ng-click="qa_reply_button_clicked(post3.id)">Reply</button>
+                                                    <div class="input-field" ng-show="post3.replying">
+                                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                        <button ng-click="qa_reply_save_button_pressed(post3.id, qa_current_reply)">Save</button>
+                                                    </div>
+                                                    <ul class="collection">
+                                                        <li class="collection-item" ng-repeat="post4 in post3.children track by post4.id">
+                                                            <span ng-bind="post4.comment"></span><button ng-click="qa_reply_button_clicked(post4.id)">Reply</button>
+                                                            <div class="input-field" ng-show="post4.replying">
+                                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                                <button ng-click="qa_reply_save_button_pressed(post4.id, qa_current_reply)">Save</button>
+                                                            </div>
+                                                            <ul class="collection">
+                                                                <li class="collection-item" ng-repeat="post5 in post4.children track by post5.id">
+                                                                    <span ng-bind="post5.comment"></span>
+                                                                    <!-- We allow for 5 levels of comment nesting -->
+                                                                    <!--
+                                                                    <button ng-click="qa_reply_button_clicked(post5.id)">Reply</button>
+                                                                    <div class="input-field" ng-show="post5.replying">
+                                                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                                        <button ng-click="qa_reply_save_button_pressed(post5.id, qa_current_reply)">Save</button>
+                                                                    </div>
+                                                                    -->
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
