added cancel buttons  #64

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -926,13 +926,17 @@
                             <div class="input-field" ng-show="qa_show_new_comment">
                                 <textarea class="validate" ng-model="qa_current_comment"></textarea>
                                 <button ng-click="qa_comment_save_button_pressed()">Save</button>
+                                <button ng-click="qa_comment_cancel_button_pressed()">Cancel</button>
+
                             </div>
                             <ul class="collection">
                                 <li class="collection-item" ng-repeat="post in qa_thread track by post.id">
-                                    <span ng-bind="post.comment"></span><button ng-click="qa_reply_button_clicked(post.id)">Reply</button>
+                                    <span ng-bind="post.comment"></span>
+                                    <button ng-click="qa_reply_button_clicked(post.id)">Reply</button>
                                     <div class="input-field" ng-show="post.replying">
                                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
                                         <button ng-click="qa_reply_save_button_pressed(post.id, qa_current_reply)">Save</button>
+                                        <button ng-click="qa_reply_cancel_button_pressed(post.id)">Cancel</button>
                                     </div>
                                     <ul class="collection">
                                         <li class="collection-item" ng-repeat="post2 in post.children track by post2.id">
@@ -940,6 +944,7 @@
                                             <div class="input-field" ng-show="post2.replying">
                                                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
                                                 <button ng-click="qa_reply_save_button_pressed(post2.id, qa_current_reply)">Save</button>
+                                                <button ng-click="qa_reply_cancel_button_pressed(post2.id)">Cancel</button>
                                             </div>
                                             <ul class="collection">
                                                 <li class="collection-item" ng-repeat="post3 in post2.children track by post3.id">
@@ -947,6 +952,7 @@
                                                     <div class="input-field" ng-show="post3.replying">
                                                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
                                                         <button ng-click="qa_reply_save_button_pressed(post3.id, qa_current_reply)">Save</button>
+                                                        <button ng-click="qa_reply_cancel_button_pressed(post3.id)">Cancel</button>
                                                     </div>
                                                     <ul class="collection">
                                                         <li class="collection-item" ng-repeat="post4 in post3.children track by post4.id">
@@ -954,6 +960,7 @@
                                                             <div class="input-field" ng-show="post4.replying">
                                                                 <textarea class="validate" ng-model="qa_current_reply"></textarea>
                                                                 <button ng-click="qa_reply_save_button_pressed(post4.id, qa_current_reply)">Save</button>
+                                                                <button ng-click="qa_reply_cancel_button_pressed(post4.id)">Cancel</button>
                                                             </div>
                                                             <ul class="collection">
                                                                 <li class="collection-item" ng-repeat="post5 in post4.children track by post5.id">
@@ -964,6 +971,7 @@
                                                                     <div class="input-field" ng-show="post5.replying">
                                                                         <textarea class="validate" ng-model="qa_current_reply"></textarea>
                                                                         <button ng-click="qa_reply_save_button_pressed(post5.id, qa_current_reply)">Save</button>
+                                                                        <button ng-click="qa_reply_cancel_button_pressed(post5.id)">Cancel</button>
                                                                     </div>
                                                                     -->
                                                                 </li>
