use single search input for QA, users, ref #36

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -281,11 +281,11 @@
                     <span class="new badge" data-badge-caption="found" style="margin-left: 5px;" ng-bind="main_search_references_number"></span>
                     <a id="referencesPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="create Reference"><i
-                            class="material-icons plusIcon">add</i></a>
+                            class="material-icons plusIcon" ng-click="references_plus_button_clicked()">add</i></a>
                 </div>
                 <div class="collapsible-body">
+                    <!--
                     <div class="row">
-                        <!-- Form -->
                         <form class="col s12">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">search</i>
@@ -294,6 +294,7 @@
                             </div>
                         </form>
                     </div>
+                    -->
                     <div class="row left-align">
                         <div class="col">
                             <div js-tree="references_search_jstree_config" should-apply="references_search_jstree_config_apply()"
