--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -189,11 +189,11 @@
                         style="margin-left: 5px;"></span>
                     <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="create Workflow"><i
-                            class="material-icons plusIcon">add</i></a>
+                            class="material-icons plusIcon" ng-click="workflows_search_create_new_pressed()">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
-                        <!-- Form -->
+                        <!-- 
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s12 m6 grid-s12-m6-l6">
@@ -208,14 +208,15 @@
                                 </div>
                             </div>
                         </form>
-                        <!-- Create / Cancel buttons in Workflows -->
+                        -->
+                        <!-- Create / Cancel buttons in Workflows 
                         <a href id="enableEditWorkflowBtn" class="waves-effect waves-light btn"
                             ng-click="workflows_search_create_new_pressed()"
                             ng-show="(!workflows_info_editable) && (!workflows_search_warning)">Create</a>
                         <a href id="disableEditWorkflowBtn" class="waves-effect waves-light btn"
                             ng-show="workflows_info_editable"
                             ng-click="tools_search_raise_edit_are_you_sure_modal('WORKFLOWS_CANCEL_BUTTON')">Cancel</a>
-                        <!-- TOOLS!!! FIXME -->
+                         TOOLS!!! FIXME -->
                     </div>
 
                     <div class="row col s12" ng-show="workflows_search_warning">
