--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -21,7 +21,7 @@
     <div id="leftPanelProgress" class="progress" style="margin-top:1px; display: none;">
         <div class="indeterminate"></div>
     </div>
-    <a id="preloaderBtn" class="waves-effect waves-light btn">Toogle Preloader</a>
+    <a id="preloaderBtn" class="waves-effect waves-light btn">Toggle Preloader</a>
     <!-- <div id="createNewBtn" class="fixed-action-btn" style="display:block">
         <a class="btn-floating btn-large waves-effect waves-light red left-align"><i class="material-icons">add</i></a>
     </div> -->
@@ -125,11 +125,11 @@
                     <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"
                         style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="create Tool"><i class="material-icons plusIcon">add</i></a>
+                        data-position="left" data-tooltip="create Tool" ng-click="tools_search_create_new_pressed_ok()"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
+                    <!--
                     <div class="row">
-                        <!-- Form -->
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s12 m4 grid-s12-m4-l4">
@@ -149,11 +149,6 @@
                                 </div>
                             </div>
                         </form>
-                        <!-- Tools. Create / Cancer  buttons -->
-                        <!-- 
-                            ng-class="{'disabled': !username}" 
-                            ng-show="(!tools_search_warning) && tools_search_name && tools_search_version"
-                        -->
                         <a href id="createToolDataBtn" class="waves-effect waves-light btn"
                             ng-click="tools_search_create_new_pressed()"
                             ng-show="(!tools_info_editable) && (!tools_search_warning)">create</a>
@@ -166,6 +161,7 @@
                             <span class="white-text" ng-bind="tools_search_warning"></span>
                         </div>
                     </div>
+                    -->
 
                     <div class="row left-align">
                         <div class="col">
