--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -409,8 +409,7 @@
                                         ng-model="workflow_description"></textarea>
                                     <label for="workflowsGeneralDescription">Description</label>
                                 </div>
-
-
+                                <div id="workflowChips" class="input-field chips left-align col s12 grid-s12-m12-l12"></div>
                                 <div class="input-field col s12 grid-s12-m12-l12" ng-show="workflow_info_forked_from">
                                     <textarea id="workflowsGeneralEditSummary" class="validate materialize-textarea"
                                         ng-model="workflow_changes" required></textarea>
@@ -430,8 +429,11 @@
                                     <div class="col s3"><b>Edit Summary:</b></div>
                                     <div class="col s9"><span ng-bind="workflow_changes"></span></div>
                                 </div>
+                                <div class="row left-align">
+                                    <div class="col s3"><b>Tags:</b></div>
+                                    <span class="new badge left" data-badge-caption="" style="margin-left: 5px;" ng-repeat="keyword in workflow_keywords"><span ng-bind="keyword"></span></span>
+                                </div>
                             </div>
-                            <div id="workflowChips" class="input-field chips left-align col s12 grid-s12-m12-l12" ng-disabled="!workflows_info_editable"></div>
                         </form>
                     </div>
                 </li>
