added markdown support for tool description #41

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -83,7 +83,7 @@
                             </div>
                             <div class="row left-align">
                                 <div class="col s3"><b>Description:</b></div>
-                                <div class="col s9"><span ng-bind="tool_description"></span></div>
+                                <div class="col s9"><span ng-bind-html="tool_description_html"></span></div>
                             </div>
                             <div class="row left-align" ng-show="tool_changes">
                                 <div class="col s3"><b>Edit Summary:</b></div>
