--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -423,7 +423,7 @@
                                 </div>
                                 <div class="row left-align">
                                     <div class="col s3"><b>Description:</b></div>
-                                    <div class="col s9"><span ng-bind="workflow_description"></span></div>
+                                    <div class="col s9"><span ng-bind-html="workflow_description_html"></span></div>
                                 </div>
                                 <div class="row left-align" ng-show="workflow_changes">
                                     <div class="col s3"><b>Edit Summary:</b></div>
